# OmegaClaw-GoalChainer

./: .gitignore  .gitmodules  .jscpd.json  README.md  pyproject.toml  todo.md
docs/: architecture.md  metamo-integration-plan.md
examples/: run_incident_demo.py
hackathon/: pitch-presentation-script.md  pitch-presentation.html  submission.md
hackathon/video/: README.md  human_handoff.md  package-lock.json  package.json  tsconfig.json  voiceover_script.md
hackathon/video/scripts/: detect-recordings.mjs  record-cast.sh  record-codebase-repair-demo.sh  record-codex-omegaclaw.sh  (+3 more)
integrations/omegaclaw/: _omega_lib.sh  codex_drives_omegaclaw.sh  codex_omegaclaw_loop.sh  goalchainer_skill.metta  run_in_omegaclaw.metta
integrations/prolog/: gc_directive.pl  gc_score.pl
src/: gcskill.py
src/goal_chainer/: __init__.py  cli.py  codebase_demo.py  deontic.py  deontic_engine.py  directive.py  evidence.py  evidence_chainer.py  execute.py  explain.py  hyperbase.py  metta_reasoner.py  mettabase_bridge.py  models.py  motivation.py  native_score.py  omegaclaw_skill.py  ontology.py  petta_bridge.py  petta_runtime.py  pipeline.py  scenarios.py  scoring.py  semantic_evidence.py  snars_query.py  validation.py
tests/: test_codebase_demo.py  test_deontic.py  test_directive.py  test_evidence_chainer.py  test_execute.py  test_hyperbase.py  test_input_sensitivity.py  test_metta_reasoner.py  test_motivation.py  test_native_score.py  test_omegaclaw_skill.py  test_ontology.py  test_petta_bridge.py  test_scoring.py  test_semantic_evidence.py  test_skill_file.py  test_snars_query.py
(+29 files in other folders)
