[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omegaclaw-goalchainer"
version = "0.1.0"
description = "Goal-aware agent decision prototype combining deontic norms with PeTTaChainer contextual evidence."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "MesTTo" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
goalchainer = "goal_chainer.cli:main"
goalchainer-skill = "goal_chainer.omegaclaw_skill:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
